Bunch of warnng police; add one more sample